# raytracer

./: LICENSE
s2900180/: FeatureList.txt
s2900180/ASCII/: lab_output.json  output_test.json  sphere_skew.json  test.json  test1.json  test2.json  test3.json  test4.json  test5.json
s2900180/Blend/: Export.py  Random.py  Ray_Visualiser.py
s2900180/Code/: CMakeLists.txt  README.md  build_run_convert.sh
s2900180/Code/include/: AccelerationHierarchy.h  BlenderFileReader.h  Camera.h  Helpers.h  Image.h  Light.h  Material.h  Mesh.h  Raytracer.h  Types.h
s2900180/Code/src/: AccelerationHierarchy.cpp  BlenderFileReader.cpp  Image.cpp  Light.cpp  Mesh.cpp  Raytracer.cpp  main.cpp
s2900180/Code/test/: CMakeLists.txt  test_Image.cpp
s2900180/Code/test/speed/: CMakeLists.txt  test_Speed.cpp
s2900180/Code/test/speed/test_data/: intersect_test.json  lots_of_obj.json
s2900180/Code/test/unit/: CMakeLists.txt  test_Image.cpp
s2900180/Output/: ray_intersect_test.txt
s2900180/Report/: report.typ
